--- a/lib/scrum_master_web/live/team_live/index.html.heex
+++ b/lib/scrum_master_web/live/team_live/index.html.heex
@@ -13,6 +13,7 @@
   row_click={fn {_id, team} -> JS.navigate(~p"/teams/#{team}") end}
 >
   <:col :let={{_id, team}} label="Name"><%= team.name %></:col>
+  <:col :let={{_id, team}} label="Num members"><%= Enum.count(team.members) %></:col>
   <:action :let={{_id, team}}>
     <div class="sr-only">
       <.link navigate={~p"/teams/#{team}"}>Show</.link>
